--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,23 @@ body{
 
 
 #header-container{
-	background-color: #99c84c;
+	background-color: #99c84a;
 	color:white;
 }
 
+#menu-container{
+	background-color: #f7f7f9;
+}
+
+.btn.btn-platzi{
+	background-color: #99c84a;
+	color: white;
+}
+
+.btn.btn-platzi:hover{
+	background-color: #8ab542;
+}
+
+input.form-control:focus{
+	border-color: #99c84a;
+}
