--- a/css/app.css
+++ b/css/app.css
@@ -69,4 +69,21 @@ input.form-control:focus{
 	}
 }
 
+#breadcrumbs-container .breadcrumb{
+	background-color: white;
+	padding-left: 0;
+}
+
+#breadcrumbs-container .breadcrumb .breadcrumb-item{
+	color: #1c3643;
+}
+
+#breadcrumbs-container .breadcrumb .breadcrumb-item.active{
+	color: #95a5a6;
+}
+
+#breadcrumbs-container .breadcrumb .breadcrumb-item+.breadcrumb-item::before{
+	content: ">";
+}
+
 
